tests/toy/neg/001036_mutation.toylang
program a = { if a then sleep else sleep do; } .
